launcher-src/styles.css
@font-face {
  src: url("pixel3.ttf");
  font-family: PixelFont;
  font-size: 20px;
}

body {
  background: #000000;
  font-weight: bold;
  font-family: PixelFont, Arial, sans-serif;
  letter-spacing: 1px;
  margin: 0;
  padding: 0;
  /* Use dynamic viewport height for iOS Safari compatibility */
  height: 100dvh;
  height: 100vh;
  width: 100vw;
  overflow-x: auto;
  overflow-y: auto;
}

.sep {
  width: 100%;
  height: 10px;
  margin-bottom: 10px;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-bottom-color: rgb(0, 110, 255);
}

a {
  all: unset;
  color: #00ffff;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
  cursor: pointer;
}

.srb2BG {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  background: url("images/bg.png") center/cover no-repeat;
  pointer-events: none;
}

.launcherMain {
  min-width: 600px;
  width: calc(100vw - 400px);
  height: calc(100svh - 0px);
  padding: 10px 10px;
  box-sizing: border-box;

  position: absolute;
  left: 50%;
  top: 0px;
  transform: translate(-50%, 0px);

  background: rgba(0, 0, 0, 0.619);
  color: #ffffff;
  border-radius: 1px;
  overflow: auto;
}

.button {
  all: unset;
  padding: 5px 5px;
  background: rgba(0, 0, 0, 0.5);
  color: #ffffff;
  border-radius: 3px;
}

.button:hover {
  background: rgba(117, 117, 117, 0.5);
  cursor: pointer;
}

.playButton {
  font-size: 30px;
  font-weight: bold;
  background: rgba(9, 255, 0, 0.5);
  width: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;

  gap: 10;
}

.playButton:hover {
  background: rgba(9, 255, 0, 0.7);
}

.fsButton {
  font-size: 30px;
  font-weight: bold;
  background: rgba(255, 157, 0, 0.5);
  width: 100%;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  gap: 10;
}

.fsButton:hover {
  background: rgba(255, 157, 0, 0.7);
}

.gameCanvas {
  background: black;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  image-rendering: pixelated;
  object-fit: fill;
  z-index: 9999;
}

.sectionHeader {
  display: block;
  font-weight: bold;
  font-size: 30px;
  margin-bottom: 10px;
}

.loaderMain {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.relayConfig {
  width: calc(100% - 0px);
  height: fit-content;
  max-height: 200px;
  min-height: 100px;
  box-sizing: border-box;
  padding: 2px;
  color: #ffffff;
  border-radius: 0px;
  border-style: solid;
  border-width: 2px;
  border-color: rgba(0, 38, 255, 0.747);
  overflow: auto;
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.noRelayContainer {
}

.noRelayText {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;

  color: rgba(255, 255, 255, 1);
}

.configuredRelay {
  width: 100%;
  min-height: 100px;
  box-sizing: border-box;
  color: #ffffff;
  background: rgba(255, 255, 255, 0.2);
  border-radius: 3px;
  display: flex;
  flex-direction: column;
  padding: 5px;
  flex-shrink: 0;
}

.configuredRelay[used] {
  background: rgba(255, 255, 255, 0.4);
}

.relayName {
  font-size: 20px;
  font-weight: bold;
}

.relayHost {
  margin-left: auto;
  font-size: 10px;
  font-style: italic;
  color: rgb(0, 110, 255);
  user-select: none;
  font-weight: bold;
}

.relayHostClickable:hover {
  cursor: pointer;
  text-decoration: underline;
}

.relayStatus {
  display: flex;
  gap: 3px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 50px;
  height: 50px;
}

.relayStatusText {
  color: rgb(255, 255, 255);
  font-weight: bold;
  font-size: 10px;
  text-align: center;
}
.relayStatusText[state="offline"] {
  color: rgb(255, 0, 0);
}
.relayStatusText[state="online"] {
  color: rgb(0, 255, 0);
}

.relayStatusImg {
  width: 28px;
  height: 28px;
  image-rendering: pixelated;
}

.relayDescription {
  font-size: 10px;
  white-space: pre;
  padding-left: 5px;
}

.relayButtons {
  margin-top: 2px;
  display: block;
}

.relayButtons > .button {
  margin: 1px 1px;
}

:root {
  --popup-dialog-font: Arial, sans-serif;
  --popup-dialog-background: #fff;
  --popup-dialog-border-radius: 10px;
  --popup-dialog-text-color: #000;
  --popup-dialog-button-background: #5985ff;
  --popup-dialog-button-hover-background: #4275ff;
  --popup-dialog-button-text-color: #fff;
  --popup-dialog-button-radius: 5px;
  --popup-dialog-input-background: #fff;
  --popup-dialog-input-border-width: 1.5px;
  --popup-dialog-input-border-color: #bababa;
  --popup-dialog-input-text-color: #000;
  --popup-dialog-message-size: 16px;
}

.windowDialogContainer {
  font-family: var(--popup-dialog-font);
}

.windowDialogBackground {
  background-color: black;
  backdrop-filter: blur(2px);
}

.windowDialogBox {
  background: var(--popup-dialog-background);
  border-radius: var(--popup-dialog-border-radius);
  color: var(--popup-dialog-text-color);
}

.windowDialogButton {
  background: var(--popup-dialog-button-background);
  color: var(--popup-dialog-button-text-color);
  border-radius: var(--popup-dialog-button-radius);
  padding: 4px 8px;
  border: none;
  cursor: pointer;
}

.windowDialogButton:hover {
  background: var(--popup-dialog-button-hover-background);
}

.windowDialogInput {
  background: var(--popup-dialog-input-background);
  border: var(--popup-dialog-input-border-width) solid
    var(--popup-dialog-input-border-color);
  color: var(--popup-dialog-input-text-color);
  outline: none;
  border-radius: 4px;
  padding: 4px;
}

.windowDialogHeader {
  font-weight: bold;
  font-size: var(--popup-dialog-message-size);
}

.logsContainer {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100svh;
    background: hsl(0, 0%, 13%);
    color: #adadad;
    font-family: monospace;
    font-size: 14px;
    overflow: auto;
    box-sizing: border-box;
    padding: 2px;
    z-index: 1500;
}

.publicNetgameBrowserContainer {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100svh;
  background: rgba(0,0,0,0.5);
}

.publicNetgameBrowserDialog {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: calc(100% - 150px);
  height: calc(100svh - 150px);
  min-width: 640px;
  min-height: 360px;
  border-radius: 3px;
  background: rgba(255,255,255,1);
  display: flex;
  flex-direction: row;
}

.publicNetgameBrowserLeft {
  display: flex;
  flex-direction: column;
  min-width: 200px;
  width: calc(100% - 450px);
  max-width: 300px;
  border-right: 2px solid rgba(0,0,0,0.3);
  box-sizing: border-box;
  flex-shrink: 0;
  flex-grow: 0;
  gap: 3px;
  overflow: auto;
}

.publicNetgameItem {
  width: 100%;
  box-sizing: border-box;
  height: fit-content;
  min-height: 50px;
  padding: 5px 5px;
  background: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
  border-radius: 4px;
}

.publicNetgameItem:hover {
  background: rgba(0,0,0,0.7);
  text-decoration: underline;
  cursor: pointer;
}

.publicNetgameItem[viewing] {
  text-decoration: underline;
  cursor: unset;
}

.publicGameSeparator {
  width: 100%;
  height: 0px;
  margin-top: 3px;
  margin-bottom: 3px;
  border-bottom-color: black;
  border-bottom-style: dashed;
  border-bottom-width: 2px;
  box-sizing: border-box;
}

.publicNetgameBrowserRight {
  display: block;
  flex-grow: 1;
  position: relative;
}

.publicNetgameBrowserCloseButton {
  position: absolute;
  top: 0;
  right: 0;
  font-size: 30px;
}

.viewPublicNetgameDetails {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-weight: bold;
  background: rgba(0,0,0,0.5);
  color: rgba(255,255,255,1);
  padding: 5px 5px;
  border-radius: 3px;
}

.publicNetgameDetails {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 100%;
  padding: 10px 10px;
  box-sizing: border-box;
}

.refreshIcon {
  width: 32px;
  height: 32px;
}

.netgameServerName {
  font-size: 30px;
}

.netgameServerURL {
  font-size: 16px;
  margin-left: 5px;
  font-family: arial;
}

.netgameCommunicationType {
  width: 25px;
  height: 25px;
  object-fit: contain;
  padding: 5px 5px;
  border-radius: 3px;
  background: rgba(255,255,255,0.4);
}

.netgameLoadingListsContainer {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: fit-content;
  height: fit-content;
  box-sizing: border-box;
  padding: 4px 4px;
  background: rgba(255,255,255,0.5);
  color: rgba(0,0,0,1);
  border-radius: 4px;
  font-size: 20px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
  gap: 8px;
}

.netgameLoadingListsImg {
  width: 30px;
  height: 30px;
}

